--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "dependencies": {
         "currency.js": "^2.0.4",
         "date-fns": "^4.1.0",
+        "dayjs": "^1.11.13",
+        "flatpickr": "^4.6.13",
         "react-responsive": "^10.0.0"
     }
 }
